uic/Designer: Use correct margin defaults for custom page-based containers.

Designer-formbuilder/uic incorrectly considered custom containers that
do not inherit a known page-based container (say QTabWidget) as
instances of QLayoutWidget, giving them  a default margin of 0.

Add a check for the custom widget <container>-element to the checks
for QLayoutWidget in uic/formbuilder.

In the formbuilder, introduce a new data structure to store
custom widget information instead of using 3 separate hashes.

Adapt one autotest baseline (Qt 3).

Reviewed-by: Jarek Kobus <jkobus@trolltech.com>
Task-number: QTBUG-5335