src/tools/uic/uic.h
@@ -115,6 +115,7 @@ public:
     bool isStatusBar(const QString &className) const;
     bool isButton(const QString &className) const;
     bool isContainer(const QString &className) const;
+    bool isCustomWidgetContainer(const QString &className) const;
     bool isMenuBar(const QString &className) const;
     bool isMenu(const QString &className) const;
 
